# smart-factory-openenv

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  dashboard_server.py  inference.py  metadata.json  openenv.yaml  package-lock.json  package.json  ppo_smart_factory_optimized_medium_vec_normalize.pkl  pyproject.toml  requirements.txt  server_express.ts
agents/: baseline_agent.py
app/: __init__.py  baseline_agent.ts  env.py  env.ts  grader.py  grader.ts  main.py  models.py  models.ts  reward.py  simulator.py  simulator.ts  tasks.py  tasks.ts
configs/: config.py
models/: latest_vecnormalize.pkl  run_easy_20260407_211728_vecnormalize.pkl  run_easy_20260407_213328_vecnormalize.pkl  run_easy_20260407_214328_vecnormalize.pkl  run_easy_20260407_221325_vecnormalize.pkl  run_easy_20260407_231624_vecnormalize.pkl  run_easy_20260407_232059_vecnormalize.pkl  run_easy_20260407_233700_vecnormalize.pkl  run_easy_20260407_235002_vecnormalize.pkl  run_easy_20260407_235748_vecnormalize.pkl  run_hard_20260407_232510_vecnormalize.pkl  run_hard_20260407_234052_vecnormalize.pkl  run_hard_20260408_000247_vecnormalize.pkl  run_medium_20260407_212113_vecnormalize.pkl  run_medium_20260407_212407_vecnormalize.pkl  run_medium_20260407_232223_vecnormalize.pkl  run_medium_20260407_233819_vecnormalize.pkl  run_medium_20260407_235928_vecnormalize.pkl  run_medium_20260411_retrained_vecnormalize.pkl
plots/: comparison_log_comparison.txt  comparison_log_smoke.txt  comparison_summary_comparison.csv  comparison_summary_comparison.json  comparison_summary_comparison.md  (+8 more)
rl/: baselines.py  (+5 more)
(+1 files in other folders)
